# process_check_app_1

./: Dockerfile  LICENSE  README.md  pyproject.toml  streamlit_app.py
assets/: AI_Verify_Checklist_PP.xlsx  map.json  ms_ga_result_template.json  ms_v0.6_result_template.json
backend/: map.py  pdf_generator.py  principle_calculator.py  report_validation.py  spreadsheet.py  workspace.py
backend/actions_components/: actions_component.py  index.html
backend/cards_component/: cards_component.py  index.html
backend/schema/: ms_v06_schema.py  ms_v1_schema.py
frontend/: generate_report.py  get_started.py  process_check.py  triage.py  upload_result.py  welcome.py
frontend/styles/: process_check_styles.py
